[package]
name = "rutor"
version = "0.1.0"
edition = "2021"

[dependencies]
bencode = { path = "../bencode" }
bytes = "1.9.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.210", features = ["derive"] }
sha1 = "0.10.6"
slotmap = "1.0.7"

[profile.release]
debug = true

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }

